# CPP_OpenGL_Viewer

./: .gitignore  CMakeLists.txt  imgui.ini  readme.md
data/: planeTube.fbx  ring.fbx
include/: CMakeLists.txt
include/ImGuizmo/: ImGuizmo.cpp
include/assimp/: CMakeLists.txt
include/assimp/include/assimp/: config.h.in  defs.h
include/dirent/: CMakeLists.txt
include/glm/ext/: matrix_clip_space.hpp  matrix_transform.hpp
include/imgui-filebrowser/: imfilebrowser.h
res/shaders/: fragment.glsl  fragmentDisplayNormal.glsl  fragmentFlat.glsl  fragment_BarycentricWireframe.glsl  fragment_FrameBufferWireframe.glsl  fragment_WireframeDisplay.glsl  geometry.glsl  geometryFlat.glsl  geometry_BarycentricWireframe.glsl  geometry_Flat.glsl  geometry_WireframeDisplay.glsl  geometry_main.glsl  geometry_normalDisplay.glsl  vertex.glsl  vertex_frameBufferWireframe.glsl
src/: GPURenderer.h  GUI.h  Light.h  Material.h  Mesh.cpp  Mesh.h  MeshLoader.h  Object3D.h  Plane.h  SceneOperations.h  ShaderUtils.h  Sphere.h  Square.h  Triangle.h  camera.h  globals.h  kernel.cl  main.cpp  ray.h  readme.md  shaders.cpp  shaders.h  transform.h  vec3.h
